---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2022-11-06
  Changes:
    - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass).
    - GUI improvements:
      - Milestones from different groups are now aligned properly.
      - Improved the look of the scroll bars that appear when using large milestones set.
      - In the settings page, you can now add milestones directly at a specific position.
      - In the settings page, you can now delete multiple milestones at the same time.
      - In the settings page, you can now shift-click arrows to move 5 places at a time.

  Bugfixes:
    - Fix estimations not being shown when the "List by group" setting was disabled.

---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2022-10-19

  Changes:
    - Update PyMods presets to account for changes in the latest PyMods versions. 
      Now comes with 4 presets depending on how many PyMods you are using: Full, Full except AE, Medium, and Short.
      As usual you will need to refresh your milestone set yourself if you are already in the middle of a PyMods playthrough (Settings -> Switch to Empty -> Switch to the preset you want -> Confirm).
    - Add preset addon for Fluidic Power (Thanks to stringweasel)

---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2022-09-13

  Features:
    - Add beta support for item aliases. You can indicate to Milestones that an item is worth a certain amount of another item.