@@ -1,10 +1,14 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.11
 Date: ????
-  Changes:
+
+  Bugfixes:
+    - Fix settings page Add/Delete buttons that were still enabled after deleting selected milestones, which could cause a crash.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.10
 Date: 2022-11-06
+
   Changes:
     - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass).
     - GUI improvements:
